# mirea-config

./: .gitignore  README.md  pyproject.toml
dz/: README.md  main.py  test_parser.py
dz/input/: game_level.txt  server_config.txt  user_profile.txt
dz/output/: game_level.json  server_config.json  user_profile.json
