[project]
name = "mirea-config"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "0.14.5"
black = "25.11.0"
mypy = "1.18.2"

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.3.0"

[tool.mypy]
files = ["dz"]
strict = true
strict_bytes = true
local_partial_types = true
ignore_missing_imports = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]

[tool.ruff]
src = ["dz"]
fix = true
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "EM", # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
]

[tool.ruff.lint.isort]
known-local-folder = ["dz"]
case-sensitive = true
combine-as-imports = true

[tool.black]
line-length = 88
target-version = ["py312"]
include = 'dz/.*\.py$'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
]
